# babylon.cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  test_number.txt
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-python.yml  build-windows.yml  release.yml
example/: CMakeLists.txt  main.c  main.cpp
include/: babylon.h  babylon.hpp
pytorch_export/: dp_export.py
scripts/deep_phonemizer/: babylon_dict.txt  dp_export.py  requirements.txt
scripts/deep_phonemizer/dp/model/: model.py
scripts/dictionary/: babylon_dict.txt  dictionary.py  lower.py
scripts/piper/: en_US-amy-medium.onnx.json  en_US-curie-medium-V1.4.onnx.json  piper_to_babylon.py
src/: babylon.cpp  cleaners.cpp  numbers_to_words.hpp  phonemizer.cpp  voice.cpp
wrappers/: babylon.py
